--- a/frontend/src/styles/components/data-tables.css
+++ b/frontend/src/styles/components/data-tables.css
@@ -4,45 +4,51 @@
  */
 
 /* Make table columns more compact */
-:deep(.p-datatable) {
+.p-datatable {
   font-size: 0.95rem;
 }
 
-:deep(.p-datatable .p-datatable-thead > tr > th),
-:deep(.p-datatable .p-datatable-tbody > tr > td) {
-  padding: 0.75rem 0.75rem;
+.p-datatable .p-datatable-thead > tr > th,
+.p-datatable .p-datatable-tbody > tr > td {
+  padding: 0.75rem 0.5rem; /* Reduced horizontal padding */
 }
 
-:deep(.p-datatable .p-column-header-content) {
+.p-datatable .p-column-header-content {
   white-space: nowrap;
 }
 
 /* Reduce width of checkbox column */
-:deep(.p-datatable tbody td:has(.p-checkbox)),
-:deep(.p-datatable thead th:has(.p-checkbox)) {
-  width: 80px;
+.p-datatable tbody td:has(.p-checkbox),
+.p-datatable thead th:has(.p-checkbox) {
+  width: 50px;
   text-align: center;
 }
 
 /* Reduce width of time input columns */
-:deep(.p-datatable tbody td:has(input[type="time"])) {
-  width: 140px;
+.p-datatable tbody td:has(input[type="time"]) {
+  width: 100px;
 }
 
 /* Reduce width of InputNumber columns - default for general use */
-:deep(.p-datatable tbody td:has(.p-inputnumber)) {
+.p-datatable tbody td:has(.p-inputnumber) {
   width: auto;
-  min-width: 80px;
+  min-width: 60px;
+}
+
+.p-datatable .p-inputnumber-input {
+  width: 100%;
+  padding-left: 0.4rem;
+  padding-right: 0.4rem;
 }
 
 /* Reduce width of actions column */
-:deep(.p-datatable tbody td:last-child) {
-  width: 100px;
+.p-datatable tbody td:last-child {
+  width: 90px;
   text-align: center;
 }
 
 /* Make Tag components more compact */
-:deep(.p-tag) {
+.p-tag {
   padding: 0.25rem 0.5rem;
   font-size: 0.85rem;
 }
